# tip-protocol

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.python  GOVERNANCE.md  LICENSE.txt  MEDIA_API.md  NOTICE.txt  PATENTS.md  README.md  SECURITY.md  TRADEMARKS.md  docker-compose.local.yml  docker-compose.scoring-test.yml  docker-compose.yml  link-platform-api.md  package-lock.json  package.json
.github/: FUNDING.yml
badge/: package.json
browser-extension/: CHROME_WEB_STORE.md  LICENSE.txt  NOTICE.txt  PRIVACY_POLICY.md  README.md  manifest.json  options.html  package.json  popup.html  sign.html  standalone.html
circuits/: dedup.circom  dedup_final.zkey  vkey.json
cli/: package.json
docs/: API.md  BADGE_DESIGN.md  CONTENT_SIGNING.md  CRYPTOGRAPHY.md  DEPLOYMENT.md  DISPUTE_SCORING.md  GDPR_COMPLIANCE.md  GETTING_STARTED.md  NODE_FINGERPRINT_CONTRACT.md  PROD_S3_SETUP.md  RFC_PROCESS.md  SIGNING_VERSIONING.md  VP_ACCREDITATION.md
genesis-data/: genesis-config.json  genesis-members.json  seed.db  (+4 more)
python/: README.md  constants.py  crypto.py  pyproject.toml  requirements.txt  setup.py
python/cli/: main.py
python/node/: __init__.py  api.py  config.py  dag.py  genesis.py  gossip.py  logger.py  main.py  scheduler.py  scoring.py
python/node/validators/: __init__.py  tx_validator.py
python/scripts/: seed.py
python/sdk/: client.py
python/shared/: __init__.py  constants.py  crypto.py  protocol_constants.py  zk.py
python/tests/: test_all.py
python/tip_node/: __init__.py  api.py  config.py  dag.py  genesis.py  gossip.py  jury.py  logger.py  main.py  scheduler.py  scoring.py
python/tip_node/validators/: tx_validator.py
(+413 files in other folders)
